amélioration bug et visuel